--- a/index.html
+++ b/index.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
-    <style>
-        .container {
-            border: 1px solid #ccc;
-            width: 200px;
-            height: 200px;
-            margin: 10px;
-            display: inline-block;
-            vertical-align: top;
-        }
+    <link rel="stylesheet" href="./style.css">
 
-        .draggable-item {
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
 </head>
 
 <body>
